apt-proxy (1.9.19+CVS) UNRELEASED; urgency=low

  * Close temporary files when finish to transfer data.
    Closes: #281156. (Otavio)

 -- Otavio Salvador <otavio@debian.org>  Thu, 18 Nov 2004 17:06:15 -0200

apt-proxy (1.9.19) unstable; urgency=low

  * Fix format in apt-proxy.conf(5). (closes: #272153) (Otavio)
  * Add default to 30 in timeout parameter when importing from version
    1. (closes: #266776, #266567) (Otavio)
  * Allow listening on multiple IP addresses. (closes: #266453) (Otavio)
  * Change to wait by the _server_ closes the connection, this solve the
    hang while using with wget and in that case, debootstrap. Thanks to
    Chet Murthy <chetsky@gmail.com> by the patch. (Otavio)
  * Change default apt-proxy.conf file to use debian-non-US instead of
    non-US. (closes: #273973, #267427) (Otavio)
  * Disable pipelining by default (disable_pipelining=1) until the pipelining
    logic is more sensible and does not attempt multiple connections to
    the same backend server (Chris)
    - Closes: #272217: extreme delays in fetching any packages
    - Closes: #274426: Apt-proxy v2 has a long delay between files
    - Closes: #251192: stuck connections
    - Closes: #219427: deals badly with connection-limited ftp sources
    - Closes: #261066: Doesn't download completely some files
  * Document the meaning of disable_pipelining in apt-proxy.conf manpage (Chris)
  * Debconf Translations:
    - Dutch (nl.po) by cobaco <cobaco@linux.be>. Closes: #280487. (Otavio)
    - Danish (da.po) by Morten Brix Pedersen <morten@wtf.dk>. 
      Closes: #276692. (Otavio)
  * Fix apt-proxy(8) backend name to debian instead of main. 
    Closes: #277447. (Otavio)

 -- Otavio Salvador <otavio@debian.org>  Thu, 18 Nov 2004 16:10:56 -0200

apt-proxy (1.9.18) unstable; urgency=low

  * Add dependencie of logrotate. (closes: #267822)
  * Save the conversion log in /var/log/apt-proxy-v1tov2.log and stopped
    to send mails to root. (closes: #268421, #266535)